Fix header spacing in mobile

--- a/components/scss/Header.scss
+++ b/components/scss/Header.scss
@@ -15,8 +15,11 @@
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
-    height: 180px;
     padding: 30px;
+
+    .header-content__elem {
+      margin-bottom: 20px;
+    }
   }
 
   hr {
